human_written_tests/WebAssembly/processed_control_flow_validation/test_br_if_18.wast
(assert_invalid
  (module (func $type-cond-void-vs-i32
    (block (br_if 0 (nop)))
  ))
  "type mismatch"
)